Barely stable version of dashboard
It builds, compiles, and runs. What more can you ask for?

--- a/tailwind_dashboard/package.json
+++ b/tailwind_dashboard/package.json
@@ -21,9 +21,13 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/d3": "^7.4.3",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/recharts": "^1.8.29",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
